# save

akhan-sc01/files/home/akhan/src/chogori-opengauss/simpleInstall/: dbg_run.sh  k2config_pgrun.json
akhan-sc01/files/home/akhan/src/chogori-opengauss/simpleInstall/k2test/: ogskvquery.py
akhan-sc01/files/home/akhan/src/chogori-platform/src/skvhttpclient/: CMakeLists.txt
akhan-sc01/files/home/akhan/src/chogori-platform/test/integration/: common_defs.sh  test_http.py  test_http_client.sh
akhan-sc01/home/akhan/src/chogori-opengauss/simpleInstall/: install.sh
akhan-sc01/home/akhan/src/chogori-opengauss/simpleInstall/k2test/: docker-compose.yaml
akhan-sc01/home/akhan/src/chogori-opengauss/src/gausskernel/bootstrap/: bootstrap.cpp
akhan-sc01/home/akhan/src/chogori-platform/src/skvhttpclient/test/: ClientIntegrationTest.cpp
akhan-sc01/home/akhan/src/chogori-platform/test/integration/: k2_test_server.sh  test_http_client.sh
akhan-sc01/home/akhan/src/futurewei-cloud/chogori-platform/test/integration/: skvclient.py  test_http.py
akhan-sc01/mnt/c/Users/akhan/work/chogori-platform/src/: CMakeLists.txt
akhan-sc01/mnt/c/Users/akhan/work/chogori-platform/src/SKVClient/src/dto/: CMakeLists.txt
akhan-sc01/patch/home/akhan/src/chogori-opengauss/simpleInstall/: install.sh  k2config_pgrun.json
akhan-sc01/patch/home/akhan/src/chogori-opengauss/simpleInstall/k2test/: ogskvquery.py
chogori-platform/client1/src/SKVClient/test/: fakeserver.cpp
save/: initdb.sql  ogskv.doc  ogskv.org  select_table.py  tatp.org  tpcc.org
(+48 files in other folders)
